# tyshi2

./: .gitignore  CMakeLists.txt  Makefile  README.md  systems
CMake/: mingw-toolchain.cmake
src/: main.cpp
src/ECS/: ECS.h  Entity.h  EntityManager.cpp  EntityManager.h
src/ECS/components/: Animator.cpp  Animator.h  Collider.h  Component.h  Movement.h  PlayerScript.h  Transform.h
src/components/: Animator.cpp  Animator.h  Controller.h  Movement.h  Sprite.h  Transform.h
src/core/: Animator.cpp  Animator.h  Camera.cpp  Camera.h  Camera.hpp  Core.cpp  Core.h  ECS.h  Engine.cpp  Engine.h  Engine.hpp  Input.cpp  Input.h  Input.hpp  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  Sprite.h  World.cpp  World.h  World.hpp  core.h
src/core/ecs/: ECS.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/core/ecs/components/: Animator.h  Component.h  Controller.h  Transform.h
src/core/ecs/systems/: AnimationSystem.h  InputSystem.h  MovementSystem.h
src/core/entitystates/: EntityStateMachine.h  PlayerStates.cpp  PlayerStates.h  State.h
src/core/gamestates/: GameState.h  MenuState.cpp  MenuState.h  PlayState.cpp  PlayState.h
src/core/states/: EditorState.cpp  EditorState.h  EditorState.hpp  GameState.h  GameState.hpp  MenuState.cpp  MenuState.hpp  PlayState.cpp  PlayState.h  PlayState.hpp
src/utils/: Vec2.h  Vec2.hpp  WorldPosition.h
